--- a/_config.yml
+++ b/_config.yml
@@ -23,15 +23,15 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 # DO NOT CHANGE THE LINE OF THIS FILE without editing .circleci/circle_urls.sh
-baseurl: "/tutorials" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 
 # This is mostly for testing
 url: "https://vsoch.github.io" # the base hostname & protocol for your site
 
 # Social (First three Required)
-repo: "https://github.com/TaisHryssai/tutorials"
+repo: "https://github.com/TaisHryssai/taishryssai"
 github_user: "TaisHryssai"
-github_repo: "tutorials"
+github_repo: "taishryssai"
 
 # Optional
 twitter: vsoch
